# TestedProject1

./: CMakeLists.txt
src/: MyClass.cpp  MyClass.h  main.cpp  testMyClass.cpp
